--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,38 @@ p{
 }
 
 .container {
-    width: 1000px;
-    height: 1000px;
+    max-width: 1440px;
+    width: 100%;
+    height: 1500px;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight:300
+}
+.exit-modal .modal-body {
+  padding: 30px;
+  border-radius:5px;
+  background:#02a2a2;
+  color:#fff;
+}
+.modal-title {
+  margin-bottom: 50px;
+  color:#fff;
+}
+.modal-buttons {
+  margin-top: 50px;
+}
+.modal-body h3 {
+  line-height:32px;
+  font-weight:300
+}
+.btn-link, .btn-link:hover {
+  color:#eee;
+  margin-top: 10px;
+}
+.btn-warning {
+  background-color: #FB8C00;
+  border-color: #FB8C00
+}
