--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Index */
+
 *{
     margin: 0;
     padding: 0;
@@ -13,6 +15,34 @@ p{
     max-width: 1440px;
     width: 100%;
     height: 1500px;
+}
+
+.logo{
+    width: 130px;
+}
+
+.bg{
+    background-image: url("../imagens/bg-homepage-desktop-roxo-1440x1024px.jpg");
+    background-repeat: no-repeat;
+    height: 1000px;
+}
+
+.display-1{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 80px;
+    line-height: 94px;
+    color: #F28123;
+}
+
+.h4{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 40px;
+    color: #FFFFFF;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
