--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+body{
+    max-width: 1440px;
+    width: 100%;
+    height: 100%;
+}
+
 p{
     font-size: 20px;
     font-weight: bold;
@@ -15,33 +21,67 @@ p{
     height: 1500px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
-body {
-  font-family: 'Lato', sans-serif;
-  font-weight:300
+.lightbox {
+    /** Hide the lightbox */
+    display: none;
+
+    /** Apply basic lightbox styling */
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color:#333333;
+    }
+
+.lightbox:after {
+    content: '';
+    display: table;
+    clear: both;
 }
-.exit-modal .modal-body {
-  padding: 30px;
-  border-radius:5px;
-  background:#02a2a2;
-  color:#fff;
-}
-.modal-title {
-  margin-bottom: 50px;
-  color:#fff;
-}
-.modal-buttons {
-  margin-top: 50px;
-}
-.modal-body h3 {
-  line-height:32px;
-  font-weight:300
-}
-.btn-link, .btn-link:hover {
-  color:#eee;
-  margin-top: 10px;
-}
-.btn-warning {
-  background-color: #FB8C00;
-  border-color: #FB8C00
+
+.lightbox .box {
+    width: -webkit-min-content;
+    width: -moz-min-content;
+    width: min-content;
+    width: 100%;
+    height: auto;
+    min-width: 640px;
+    max-width: 1441.54px;
+    margin: 2% auto;
+    padding:20px;
+    background-color:#FFF;
+    box-shadow: 0px 1px 26px -3px #777777;
+    background: url(../images/bg-popup-desktop-roxo-1440x1024px.jpg);
+    }
+
+    .lightbox .title {
+        margin:0;
+        padding:0 0 10px 0px;
+        border-bottom:1px #ccc solid;
+        font-size:22px;
+        }
+
+    .lightbox .content {
+        display:block;
+        padding:20px 0 0 0px;
+        font-size:18px;
+        line-height:22px;
+        margin-left: 10%;
+        }
+
+    .lightbox .close {
+        float:right;
+        display:block;
+        text-decoration:none;
+        font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size:22px;
+        color:#858585;
+        }
+
+.lightbox .open {
+    /** Show lightbox when mouse leaves the browser window */
+    display: block;
+    outline: none;
 }
