--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,148 @@ body {
   background-color: #FB8C00;
   border-color: #FB8C00
 }
+
+#conheca {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 37px;
+    color: #717171;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#nossaequipe {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 38px;
+    line-height: 45px;
+    color: #462255;
+    width: 100%;
+    margin-top: 4%;
+    margin-left: 5%;
+}
+
+#bglinha {
+    background: #F7F7F7;
+}
+
+#imagemavatar {
+    border-radius: 50%;
+    width: 30%;
+    height: 100%;
+  }
+
+#avatar1 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 37px;
+    color: #462255;
+
+}
+
+#txtavatar1 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 37px;
+    color: #717171;
+}
+
+#quadrado {
+    background: #FFFFFF;
+    border-radius: 10px;
+    justify-content: f;
+    display: block;
+    align-items: center;
+    text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+#quadradoform {
+    background: #FFFFFF;
+    border-radius: 10px;
+    justify-content: f;
+    display: block;
+    align-items: center;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 4%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.form-control11{
+    border: 3px solid #C4C4C4;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #C4C4C4;
+    width: 50%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.form-control22{
+    border: 3px solid #C4C4C4;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #C4C4C4;
+    width: 50%;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#button {
+    background: #F28123;
+    border-radius: 5px; 
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 37px;
+    text-align: center;
+    color: #462255;
+    width: 50%;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+#typagetitulo {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 120px;
+    line-height: 141px;
+    color: #F28123;
+    padding-left: 50px;
+}
+
+#typagetxt {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 37px;
+    color: #FFFFFF;
+    padding-left: 50px;
+}
+
+#logoty {
+    margin-left: 3%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
