--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ p{
     max-width: 1440px;
     width: 100%;
     height: 1500px;
+
 }
 
 .logo{
@@ -43,6 +44,7 @@ p{
     font-size: 30px;
     line-height: 40px;
     color: #FFFFFF;
+    
 }
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
@@ -85,6 +87,7 @@ body {
     color: #717171;
     margin-left: 5%;
     margin-right: 5%;
+    
 }
 
 #nossaequipe {
@@ -219,4 +222,16 @@ body {
     margin-left: 3%;
     margin-top: 5%;
     margin-bottom: 5%;
+}
+
+#direitos {
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 32px;
+line-height: 37px;
+text-align: center;
+color: rgba(113, 113, 113, 0.7);
+margin-top: 10%;
+margin-bottom: 3%;
 }
