--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,11 @@ p{
 
 .bg{
     background-image: url("../imagens/bg-homepage-desktop-roxo-1440x1024px.jpg");
-    background-repeat: no-repeat;
     height: 1000px;
-    background-size: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .display-1{
