--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,13 @@
     padding: 0;
 }
 
-body{
+.corpo{
     max-width: 1440px;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin: auto;
 }
 
-p{
-    font-size: 20px;
-    font-weight: bold;
-    color: blueviolet;
-}
-
-.container {
-    max-width: 1440px;
-    width: 100%;
-    height: 1500px;
-
-}
 
 .logo{
     width: 130px;
@@ -30,14 +19,15 @@ p{
 
 .bg{
     background-image: url("../imagens/bg-home-mobile-roxo-360x640px.jpg");
-    height: 1000px;
+    max-width: 100%;
+    height: auto;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
 
-@media (min-width: 280px ) {
+@media (min-width: 620px ) {
     .bg {
         background-image: url("../imagens/bg-homepage-desktop-roxo-1440x1024px.jpg");
     }
@@ -82,32 +72,13 @@ p{
     
 }
 
-.lightbox {
-    /** Hide the lightbox */
-    display: none;
-
-    /** Apply basic lightbox styling */
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    color:#333333;
-    }
-
-.lightbox:after {
-    content: '';
-    display: table;
-    clear: both;
-}
 .btn-warning {
   background-color: #FB8C00;
   border-color: #FB8C00
 }
 
 #conheca {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 32px;
@@ -115,11 +86,12 @@ p{
     color: #717171;
     margin-left: 5%;
     margin-right: 5%;
+    padding-top: 50px;
     
 }
 
 #nossaequipe {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 38px;
@@ -130,18 +102,27 @@ p{
     margin-left: 5%;
 }
 
+#inscrevase {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 38px;
+    line-height: 45px;
+    color: #462255;
+}
+
 #bglinha {
     background: #F7F7F7;
 }
 
 #imagemavatar {
     border-radius: 50%;
-    width: 30%;
+    width: 50%;
     height: 100%;
   }
 
 #avatar1 {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
@@ -151,7 +132,7 @@ p{
 }
 
 #txtavatar1 {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
@@ -162,7 +143,6 @@ p{
 #quadrado {
     background: #FFFFFF;
     border-radius: 10px;
-    justify-content: f;
     display: block;
     align-items: center;
     text-align: center;
@@ -175,7 +155,6 @@ p{
 #quadradoform {
     background: #FFFFFF;
     border-radius: 10px;
-    justify-content: f;
     display: block;
     align-items: center;
     text-align: center;
@@ -292,6 +271,12 @@ margin-bottom: 3%;
     box-shadow: 0px 1px 26px -3px #777777;
     background: url(../images/bg-popup-desktop-roxo-1440x1024px.jpg);
     }
+
+    .lightbox:after {
+		content: '';
+		display: table;
+		clear: both;
+	}
 
     .lightbox .title {
         margin:0;
