--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@
 
     }
 
-    #h3 {
+    #h4 {
         margin-left: 10%;
         font-size: 80px;
         max-width: 80%;
@@ -73,7 +73,7 @@
     }
 }
 
-#h3{
+#h4{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -261,7 +261,7 @@ font-weight: bold;
 font-size: 32px;
 line-height: 37px;
 text-align: center;
-color: rgba(113, 113, 113, 0.7);
+color: #33243a;
 margin-top: 10%;
 margin-bottom: 3%;
 }
