--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 .bg{
-    background-image: url("../imagens/bg-home-mobile-roxo-360x640px.jpg");
+    background-image: url("../images/bg-home-mobile-roxo-360x640px.jpg");
     max-width: 100%;
     max-height: auto;
     background-repeat: no-repeat;
@@ -64,7 +64,7 @@
     
 
     .bg {
-        background-image: url("../imagens/bg-homepage-desktop-roxo-1440x1024px.jpg");
+        background-image: url("../images/bg-homepage-desktop-roxo-1440x1024px.jpg");
         padding-bottom: 10%;
     }
 }
@@ -280,7 +280,7 @@ margin-bottom: 3%;
     display: none;
     justify-content: center;
     align-items: center;
-    background-image: url(../imagens/bg-popup-desktop-roxo-1440x1024px.jpg);
+    background-image: url(../images/bg-popup-desktop-roxo-1440x1024px.jpg);
 }
 
 .container-news {
@@ -395,4 +395,10 @@ margin-bottom: 3%;
         margin-top: 48px;
         width: 30%;
     }
+}
+
+.formLabels {
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    color: #462255;
 }
