--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,8 @@ margin-bottom: 3%;
     font-size: 130%;
 }
 
+
+
 .nomesContador {
     display: block;
     background: white;
@@ -331,6 +333,34 @@ margin-bottom: 3%;
     font-weight: 700;
 }
 
+#webinar {
+    max-width: 640px;
+    width: 100%;
+    height: 110px;
+    background: url(../images/banner-mobile.jpeg) no-repeat;
+    background-size: cover;
+    display: block;
+    margin-right: 0;
+    top: 0;
+    left: -3em;
+    margin-left: -3em;
+}
+
+#botaoWebinar {
+    position: relative;
+    text-align: center;
+    display: block;
+    font-size: 80%;
+    right: 14%;
+    top: 65%;
+    width: 40%;
+    height:15%;
+    background: white;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    color: #462255;
+    font-weight: bold;
+}
 
 @media only screen and (min-width: 720px) {
 
@@ -372,6 +402,34 @@ margin-bottom: 3%;
         margin-top: 48px;
         width: 30%;
     }
+
+    #webinar {
+        background: url(../images/banner-desktop.jpeg) no-repeat;
+        background-size: cover;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        margin-right: 0;
+       
+    }
+
+    #botaoWebinar{
+       position: relative;
+       font-size: 250%;
+       right: 4%;
+       top: 30%;
+       width: 25%;
+       height:40%;
+       background: white;
+       border: none;
+       font-family: 'Roboto', sans-serif;
+       color: #462255;
+       font-weight: bold;
+
+    }
+
+
 }
 
 
@@ -379,3 +437,4 @@ margin-bottom: 3%;
 .containerIframe {
     height: 400px;
 }
+
