--- a/css/estilo.css
+++ b/css/estilo.css
@@ -106,7 +106,7 @@ body{
 
 /* Pop up */ 
 
-.sad-news-container {
+/*.sad-news-container {
     width: 100%;
     height: 100%; 
     position: fixed;
